--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "request": "^2.64.0",
     "serve-favicon": "~2.3.0",
     "superagent": "^1.4.0",
+    "underscore": "^1.8.3",
     "unirest": "^0.4.2",
     "url": "^0.11.0"
   }
